--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-helmet": "^6.1.4",
     "@types/react-router-dom": "^5.3.0",
     "@types/styled-components": "^5.1.15"
